<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>example_package</name>
  <version>0.0.0</version>
  <description>ROS2 Example Package</description>

  <!-- Maintainer, Author, License -->
  <maintainer email="davide.ferrari95@unimore.it">Davide Ferrari</maintainer>
  <author email="davide.ferrari95@unimore.it">Davide Ferrari</author>
  <license>BSD-3</license>

  <!-- Build Dependancies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS Dependancies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- LaunchFiles Dependancies -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Custom Message Creation Dependancies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Message Dependancies -->
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Action Dependancies -->
  <depend>action_msgs</depend>

  <!-- Test Dependancies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
